[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecmindb-sdk"
version = "1.0.0"
description = "Python SDK for VecminDB - High-performance vector database HTTP client"
authors = [{email = "dev@vecmindb.com", name = "VecminDB Team"}]
license = {text = "MIT OR Apache-2.0"}
readme = "../../README.md"
requires-python = ">=3.8"
homepage = "https://vecmindb.com"
repository = "https://github.com/lingxinmind/vecminDB"
documentation = "https://vecmindb.com/docs"
keywords = ["vector-database", "similarity-search", "embedding", "sdk", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://vecmindb.com"
Repository = "https://github.com/lingxinmind/vecminDB"
Documentation = "https://vecmindb.com/docs"
Changelog = "https://vecmindb.com/changelog"

[tool.setuptools.packages.find]
include = ["vecmindb*"]
